# task-graph-engine

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  model_capabilities.csv  model_costs.csv  pyproject.toml  requirements.txt  test_agent_directly.py  webapp.py
.github/workflows/: python-app.yml
src/: webapp.py
src/flow_agent/: logging_config.py
src/flow_agent/data_objs/: business_objs.py
src/flow_agent/llms/: genai_agent.py
src/flow_agent/utils/: nodes.py  state.py
src/task_agent/: config.py  graph.py
src/task_agent/data_objs/: task_details.py
src/task_agent/llms/: demo_integration.py  sub_task_agent.py
src/task_agent/llms/llm_model_factory/: llm_factory.py
src/task_agent/llms/prompts/: __init__.py  capability_inference.prompt  combiner.prompt  planner.prompt  subtask.prompt
src/task_agent/llms/simple_llm_selector/: __init__.py  demo.py  inference.py  models.py  router.py
src/task_agent/utils/: circuit_breaker.py  input_validation.py  logic.py  model_live_usage.py  nodes.py  path_utils.py  state.py  tools.py
tests/: conftest.py
tests/end_to_end/: evaluate_agents.py  test_end_to_end_flow.py
tests/manual/: demo.py  demo_integration.py  test_nvidia.py  vision_api_test.py
tests/unit_tests/: test_async_capability_inference.py  test_circuit_breaker.py  test_combiner.py  test_config.py  test_csv_path_resolution.py  test_data_objects.py  test_input_validation.py  test_llm_factory.py  test_llm_selector_models.py  test_logic_utils.py  test_model_live_usage.py  test_nodes.py  test_prompt_loading.py  test_router.py  test_state_management.py  test_tavily_integration.py  test_webapp.py  tic_tac_toe.py
ui/: app.py
