[project]
name = "task-graph-engine"
version = "1.0.0"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "Amrit", email = "amrit@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.7",
    "python-dotenv>=1.0.1",
    "langchain-core>=1.2.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "google-genai>=1.49.0",
    "openai-agents>=0.5.1",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "langgraph-api>=0.5.14",
    "fastapi>=0.115.0",
    "streamlit>=1.53.1",
    "requests>=2.32.5",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "protobuf>=6.33.4",
    "typing-extensions>=4.15.0",
    "langchain-sarvam-integration>=0.1.7",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.17",
    "langsmith>=0.4.43",
]


[project.optional-dependencies]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.2",
    "flake8>=7.1.1"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
